--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -26,10 +27,11 @@
   <title>gtk_flutter</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script> -->
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
@@ -38,7 +40,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
   </script>
-  
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -107,4 +109,5 @@
     }
   </script>
 </body>
+
 </html>
